Modify GitHub Actions workflow for debugging and artifact upload
Updated workflow to show generated files for debugging and changed artifact upload to only include the Front folder.

--- a/.github/workflows/physicsci.yml
+++ b/.github/workflows/physicsci.yml
@@ -18,26 +18,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 3.2. Construye la imagen de Docker (usando tu nuevo Dockerfile)
-      - name: Build Docker image
-        run: docker build -t fisico-robot .
 
-      # 3.3. ¡EJECUTA EL SCRIPT EN LA SUB-CARPETA! (Paso clave)
-      - name: Run analysis to generate plot
+      - name: Show generated files for debug
         run: |
-          # Monta el repo del runner en /app y ejecuta el script desde ahí.
-          # Usamos $GITHUB_WORKSPACE que apunta al directorio del checkout en Actions.
-          docker run --rm -v "$GITHUB_WORKSPACE":/app -w /app fisico-robot python ArchivosPython/main.py
+          echo "Contenido de workspace:"
+          ls -la
+          echo "Contenido de Front:"
+          ls -la Front || true
 
       # 3.4. Configura GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      # 3.5. Sube los artefactos (el index.html y el .png generado)
+      # 3.5. Sube los artefactos (solo la carpeta Front)
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.' # Sube todo, incluyendo el .png generado
+          path: 'Front' # Subir solo la carpeta Front para que index.html quede en la raíz del sitio
 
   # ... (trabajo de 'deploy' sin cambios) ...
   deploy:
