--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-uproot
-awkward
-hist
-matplotlib
-numpy
-pandas
-nbconvert
-jupyter-client
-atlasopenmagic
-vector
-ipykernel
-fastapi
-uvicorn[standard] == 0.22.0
-request
-aiohttp
+uproot==5.3.0
+awkward==2.6.0
+hist==2.7.2
+matplotlib==3.8.2
+numpy==1.26.2
+pandas==2.1.3
+nbconvert==7.11.0
+jupyter-client==8.6.0
+atlasopenmagic==1.6.1
+vector==1.4.0
+ipykernel==6.27.1
+fastapi==0.104.1
+uvicorn==0.24.0
+websockets==11.0.3
+httptools==0.6.0
+requests==2.31.0
+aiohttp==3.8.6
